Aligned with keycloak 24
Added dependencies of RHBK 24.0.3